# house-prices-ml

./: pyproject.toml
data/processed/: submission.csv
house_prices_ml/: config.py  generate_submission.py  modelling.py  plotting.py  preprocessing.py  train.py  utils.py
models/: model.joblib.dvc
notebooks/: 01-exploration.ipynb  02-preprocessing.ipynb  03-modelling.ipynb
